# miskin

./: .gitignore  AGENTS.md  Cargo.toml  OPENCODE.md  README.md  install.sh  vercel.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/commands/: cargo.md  docker.md  files.md  gh.md  git.md  index.md  linting.md  npm.md  system.md  testing.md
docs/guide/: configuration.md  how-it-works.md  index.md  installation.md
docs/integrations/: claude.md  codex.md  copilot.md  cursor.md  gemini.md  index.md  opencode.md  windsurf.md
npm/: cli.js  install.js  package.json
src/: config.rs  main.rs  tee.rs
src/analytics/: counter.rs  mod.rs  report.rs
src/cli/: config_cmd.rs  discover.rs  hook.rs  init.rs  mod.rs  session.rs  stats.rs
src/filters/: cargo.rs  curl.rs  docker.rs  files.rs  generic.rs  gh.rs  git.rs  lint.rs  mod.rs  npm.rs  system.rs  tests.rs
src/hooks/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  windsurf.rs
src/prompt/: mod.rs
