[package]
name = "miskin"
version = "0.1.0"
edition = "2024"
description = "Save AI tokens across multiple providers. CLI proxy that compresses command output + injects caveman-mode prompts."
license = "MIT"
repository = "https://github.com/sony/miskin"

[[bin]]
name = "miskin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["process", "io-util", "io-std", "macros", "rt-multi-thread"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
regex = "1"
tiktoken-rs = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap_complete = "4"
